--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <!-- Header-top -->
-    <header class="container header-t ">
+    <header class="container header-t">
         <nav class="navbar d-flex justify-content-start">
             <a class="navbar-brand" href="#">
                 <img src="./images/OLX_New_Logo.png" width="40" height="30" alt="">
@@ -134,7 +134,7 @@
             <div class="row row-cols-4 m-0">
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1 columnss">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-1.JPG" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-1 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text p-text">سردی اور گرمی کے کور اور بجلی کی فٹنگ پرندوں کا 8 خا نوں والا
                                 پنجرہ</p>
@@ -145,7 +145,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-2.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-2 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">Ladies Watches Good Quality with Bangles and without bangles
                                 available</p>
@@ -156,7 +156,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-3.JPG" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-3 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card" id="card">
                             <p class="card-text  p-text">Gul ahmed original lawn/latest summer collection volume 1
                             </p>
@@ -167,7 +167,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-4.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-4 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">Get This Prominently Located Residential Plot For Sale In DHA
                                 Defence
@@ -179,7 +179,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-5.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-5 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">HP laserjet mfp 4555/630 Photocopier, Printer, Scanner ASIAN
                                 TRADERS
@@ -191,7 +191,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-6.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-6 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">Fx car for sale kahuta road Aari syedan</p>
                             <h3 class="h-3">Rs 130,000</h3>
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-7.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-7 (3).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card" id="card">
                             <p class="card-text  p-text">Redmi note 11 4/128 & 6/128</p>
                             <h3 class="h-3">Rs 32,800</h3>
@@ -211,7 +211,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-8.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-8 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">Gaming Pc Dell Xeon T5500 CPU + LED + Keyboard + Mouse For Sale
                             </p>
@@ -222,7 +222,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-9.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-9 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text   p-text">Bukraa big Nasul walaa, shifting Karàchi</p>
                             <h3 class="h-3">Rs 16,000</h3>
@@ -232,7 +232,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-10.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-10 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text   p-text">POWER MIRRORS RETACTABLE WALE AVELEBAL HE</p>
                             <h3 class="h-3">Rs 6,000</h3>
@@ -242,7 +242,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-11.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-11 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card" id="card">
                             <p class="card-text  p-text">Sector C2 5 Marla Developed Commercial Plot For Sale In Bahria
                                 Enclave</p>
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-12.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-12 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">iphone 6s 64gb pta Approved</p>
                             <h3 class="h-3">Rs 22,000</h3>
@@ -263,7 +263,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-13.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-13 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card" id="card">
                             <p class="card-text  p-text">vivo v21</p>
                             <h3 class="h-3">Rs 49,999</h3>
@@ -273,7 +273,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-14.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-14 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">Hanging Pod Swing Chair, Jhoola ,COD ,jhula</p>
                             <h3 class="h-3">Rs 100</h3>
@@ -283,7 +283,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-15.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-15 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">car wheel covers stylish</p>
                             <h3 class="h-3">RS 3,000</h3>
@@ -293,7 +293,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-16.jpg" width="100%" class="card-img-top  img-box" alt="...">
+                        <img src="./images/col-item-16 (2).JPG" width="100%" class="card-img-top  img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">HD Dish Antenna in Lahore 0322-5400085</p>
                             <h3 class="h-3">RS 45,000</h3>
@@ -303,7 +303,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-17.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-17 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card">
                             <p class="card-text   p-text">laces . jewellery . zari</p>
                             <h3 class="h-3">Rs 123</h3>
@@ -313,7 +313,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-18.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-18 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card" id="card">
                             <p class="card-text  p-text">tables</p>
                             <h3 class="h-3">RS 25,000</h3>
@@ -323,7 +323,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-19.jpg" width="100%" class="card-img-top img-box" alt="...">
+                        <img src="./images/col-item-19 (2).JPG" width="100%" class="card-img-top img-box" alt="...">
                         <div class="card-body body-card" id="card">
                             <p class="card-text  p-text">7 Marla 2nd floor house for rent bilal town</p>
                             <h3 class="h-3">Rs 20,000</h3>
@@ -333,7 +333,7 @@
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 my-1">
                     <div class="card" style="width: 100%;">
-                        <img src="./images/col-item-20.jpg" width="100%" class="card-img-top img-box">
+                        <img src="./images/col-item-20 (2).JPG" width="100%" class="card-img-top img-box">
                         <div class="card-body body-card">
                             <p class="card-text  p-text">Guitar,Taylor, Brand,Fender Guitar 41"Size</p>
                             <h3 class="h-3">Rs 21,000</h3>
